Grid with locked columns should wrap cell text. Fixes #3141

--- a/styles/web/common/grid.less
+++ b/styles/web/common/grid.less
@@ -190,6 +190,12 @@ div.k-grid-header .k-header
     white-space: nowrap;
 }
 
+.k-grid-content-locked,
+.k-grid-content
+{
+    white-space: normal;
+}
+
 .k-grid-header-locked,
 .k-grid-content-locked,
 .k-grid-footer-locked
